# wayout

./: CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml
contrib/git/: PKGBUILD
src/: clap.rs  flags.rs  main.rs  output.rs  wayland.rs  wayout.rs
