[package]
authors = ["Shinyzenith <https://shinyzenith.xyz>"]
description = "A Simple tool to set output modes for wlroots compositors implementing zwlr_output_power_management_v1."
documentation = "https://docs.rs/crate/wayout/latest"
edition = "2021"
exclude = [
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
	"contrib/*",
	"docs/*",
]
homepage = "https://waycrate.shinyzenith.xyz"
keywords = ["display", "power", "wlroots"]
license = "BSD-2-Clause"
name = "wayout"
repository = "https://git.sr.ht/~shinyzenith/wayout"
version = "1.1.3"

[dependencies]
clap = "3.1.2"
wayland-client = "0.29.4"
wayland-protocols = { version = "0.29.4", features=["unstable_protocols", "client"] }

[[bin]]
name = "wayout"
path = "src/wayout.rs"

[profile.release]
opt-level = 'z'
strip = true
