[package]
authors = ["Shinyzenith <https://aakash.is-a.dev>"]
description = "A Simple tool to set output modes for wlroots compositors implementing zwlr_output_power_management_v1."
documentation = "https://docs.rs/crate/wayout/latest"
edition = "2021"
exclude = [
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
	"contrib/*",
	"docs/*",
]
homepage = "https://waycrate.shinyzenith.xyz"
keywords = ["display", "power", "wlroots"]
license = "BSD-2-Clause"
name = "wayout"
repository = "https://github.com/shinyzenith/wayout"
version = "1.2.3"

[dependencies]
clap = { version = "4.5.31", features=["derive"] }
wayland-client = "0.31.8"
wayland-protocols = { version = "0.32.6", features=["unstable", "client"] }
wayland-protocols-wlr = { version = "0.3.6", features = ["client"] }

[[bin]]
name = "wayout"
path = "src/wayout.rs"

[profile.release]
opt-level = 'z'
strip = true
